# zed-supercollider

./: .claude-pr-policy.json  .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  Cargo.toml  IMPROVEMENTS.md  LICENSE  LOG.md  PLAN.md  README.md  extension.toml  justfile  rust-toolchain.toml  test_lsp.sh
.agents/: architecture.md  commands.md  conventions.md  distribution-proposal.md  testing.md
.agents/code-reviews/: 2026-01-05-review.md
.ai/: AGENTS.md  README.md  architecture.md  commands.md  context.md  conventions.md  improvements.md
.beads/: config.yaml  issues.jsonl  recipes.toml  sync_base.jsonl
.claude/: README.md
.zed/: README.md  keymap-vscode-compatible.json  keymap-zed-native.json  keymap.json  tasks.json
docs/: AGENTS.md  CONTRIBUTING.md  KEYBINDINGS.md  LOG.md  MIGRATION.md  MIGRATION_PLAN.md  PLAN.md  SETTINGS.md  TASKS_SNIPPET.md  TROUBLESHOOTING.md  USAGE.md  http-api.md  vim-selection-workarounds.md
scripts/: build.sh  check-setup.sh  install-tasks.sh  test-lsp-codeactions.py  test-sclang.sh  validate-config.sh
server/launcher/: Cargo.toml  README.md
server/launcher/src/: bridge.rs  constants.rs  http.rs  lib.rs  logging.rs  main.rs  orchestrator.rs  process.rs
server/launcher/tests/: launcher_tests.rs
snippets/: supercollider.json
src/: lib.rs
tests/: nasty-text.scd  test_eval.scd  test_runnables.scd
tools/: boot-server.sh  debug-env.sh  eval-block.sh  eval-line.sh  eval-selection.sh  eval.sh  help-browser.sh  help-terminal.sh  help-window.sh  kill-all.sh  quit-server.sh  recompile.sh  stop.sh  word-at-cursor.sh
(+66 files in other folders)
