[package]
name = "zed_supercollider"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
zed_extension_api = "0.7.0"

## Note: Do not declare a Cargo workspace in the extension root.
## Zed builds the root crate to Wasm; a workspace may cause native bins
## (like the launcher) to be built for Wasm and hang/fail. Build the
## launcher separately with `cargo build -p sc_launcher`.
