[package]
name = "sc_launcher"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
which = "8.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lsp-types = "0.95"
tiny_http = "0.12"
log = "0.4"
env_logger = "0.11"
libc = "0.2"
socket2 = "0.5"
fslock = "0.2"

[profile.test]
opt-level = 1

[profile.release]
lto = true
strip = true

[lints.clippy]
all = "warn"
should_implement_trait = "warn"
